html/semantics/forms/constraints/form-validation-validity-valid.html WPT test is failing https://bugs.webkit.org/show_bug.cgi?id=233778

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid-expected.txt:

Source/WebCore:

html/semantics/forms/constraints/form-validation-validity-valid.html WPT test is failing in WebKit
but passing in Blink & Gecko. The issue was caused by incorrect willValidate() checks inside
HTMLInputElement::isValid() & HTMLSelectElement::valueMissing().

No new tests, rebaselined existing tests.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::isValid const):
* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::valueMissing const):

LayoutTests:

Rebaseline WPT tests now that more checks are passing.

* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid-expected.txt:
* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt:



Canonical link: https://commits.webkit.org/244821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286482 268f45cc-cd09-0410-ab3c-d52691b4dbfc